Remove content::BluetoothChooser::RemoveDevice() function

content::BluetoothChooser::RemoveDevice() function is not used, this
CL removes it.

BUG=675720

Review-Url: https://codereview.chromium.org/2753613002
Cr-Commit-Position: refs/heads/master@{#457114}

Former-commit-id: f33d69fc38520101b4dfeed7213eec7be237e52b