chrome/browser/ui/android/bluetooth_chooser_android.cc
@@ -109,13 +109,6 @@ void BluetoothChooserAndroid::AddOrUpdateDevice(
       env, java_dialog_, java_device_id, java_device_name);
 }
 
-void BluetoothChooserAndroid::RemoveDevice(const std::string& device_id) {
-  JNIEnv* env = AttachCurrentThread();
-  ScopedJavaLocalRef<jstring> java_device_id =
-      ConvertUTF16ToJavaString(env, base::UTF8ToUTF16(device_id));
-  Java_BluetoothChooserDialog_removeDevice(env, java_dialog_, java_device_id);
-}
-
 void BluetoothChooserAndroid::OnDialogFinished(
     JNIEnv* env,
     const JavaParamRef<jobject>& obj,
