chrome/browser/ui/android/bluetooth_chooser_android.h
@@ -28,7 +28,6 @@ class BluetoothChooserAndroid : public content::BluetoothChooser {
                          bool is_gatt_connected,
                          bool is_paired,
                          int signal_strength_level) override;
-  void RemoveDevice(const std::string& device_id) override;
 
   // Report the dialog's result.
   void OnDialogFinished(JNIEnv* env,
