chrome/browser/ui/bluetooth/bluetooth_chooser_desktop.cc
@@ -39,7 +39,3 @@ void BluetoothChooserDesktop::AddOrUpdateDevice(
       device_id, should_update_name, device_name, is_gatt_connected, is_paired,
       signal_strength_level);
 }
-
-void BluetoothChooserDesktop::RemoveDevice(const std::string& device_id) {
-  bluetooth_chooser_controller_->RemoveDevice(device_id);
-}
