chrome/browser/ui/bluetooth/bluetooth_chooser_desktop.h
@@ -28,7 +28,6 @@ class BluetoothChooserDesktop : public content::BluetoothChooser {
                          bool is_gatt_connected,
                          bool is_paired,
                          int signal_strength_level) override;
-  void RemoveDevice(const std::string& device_id) override;
 
  private:
   // Weak. DeviceChooserContentView[Cocoa] owns it.
