chrome/browser/ui/bluetooth/chrome_extension_bluetooth_chooser.h
@@ -35,7 +35,6 @@ class ChromeExtensionBluetoothChooser : public content::BluetoothChooser {
                          bool is_gatt_connected,
                          bool is_paired,
                          int signal_strength_level) override;
-  void RemoveDevice(const std::string& device_id) override;
 
  private:
   // Weak. DeviceChooserContentView[Cocoa] owns it.
